--- a/web/static/index.html
+++ b/web/static/index.html
@@ -165,7 +165,10 @@
         <!-- Track 404 pages. -->
         <h2>Tracking 404 Pages</h2>
         <p>
-            TODO
+            Pages that cannot be found can simply be tracked by calling the pirschNotFound JavaScript function. They will be displayed as an event on the Pirsch dashboard. The button below will simulate the behaviour. Usually you would just add a simple JavaScript snippet to trigger the function.
+        </p>
+        <p>
+            <button onclick="pirschNotFound()">404 Page Not Found</button>
         </p>
     </body>
 </html>
