Completed web demo.

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -159,7 +159,10 @@
         <!-- Track file downloads. -->
         <h2>Tracking File Downloads</h2>
         <p>
-            TODO
+            Pirsch will automatically track an event for each link that contains a file extension. Downloading the PDF below will trigger an event, letting you know which file was downloaded. You can add file extensions by setting the data-download-extensions attribute.
+        </p>
+        <p>
+            <a href="/download/sample.pdf">PDF Download</a>
         </p>
 
         <!-- Track 404 pages. -->
