Fixed pirsch-extended.js URL.

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -72,9 +72,9 @@
         </style>
 
         <!-- Adjust the data-code attribute with your identification code and remove the data-hit-endpoint, data-event-endpoint, and data-dev attribute. -->
-        <script defer type="text/javascript" src="https://localhost.com:9999/pirsch-ext.js"
-            id="pirschextjs"
-            data-code="2Mrbk30Wiy4eG1mRQ3S4jRkU2mmHIadm"
+        <script defer type="text/javascript" src="https://localhost.com:9999/pirsch-extended.js"
+            id="pirschextendedjs"
+            data-code="CyUNKqUjHUjlObnNB4NkOqDh3ggn9J5D"
             data-hit-endpoint="https://localhost.com:9999/hit"
             data-event-endpoint="https://localhost.com:9999/event"
             data-dev></script>
