Added Cloudflare proxy Workers.

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -74,7 +74,7 @@
         <!-- Adjust the data-code attribute with your identification code and remove the data-hit-endpoint, data-event-endpoint, and data-dev attribute. -->
         <script defer type="text/javascript" src="https://localhost.com:9999/pirsch-extended.js"
             id="pirschextendedjs"
-            data-code="xSuPGrRmAoN5wOrCDw0UryvUXfrrn30j"
+            data-code="eUsT8YOOOzcjXyms3gLag1216j1s2nDk"
             data-hit-endpoint="https://localhost.com:9999/hit"
             data-event-endpoint="https://localhost.com:9999/event"
             data-dev></script>
@@ -154,6 +154,13 @@
         <p>
             <a href="https://pirsch.io" target="_blank" pirsch-ignore>Visit pirsch.io</a><br />
             <a href="https://pirsch.io" target="_blank" class="pirsch-ignore">Visit pirsch.io</a>
+        </p>
+        <p>
+            Empty and broken links will also be ignored.
+        </p>
+        <p>
+            <a href="">Empty link</a><br />
+            <a href=".http:broken">Broken link</a>
         </p>
 
         <!-- Track file downloads. -->
