Fixed CSS selector for events in extended script.

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -84,7 +84,7 @@
         <!-- Adjust the data-code attribute with your identification code and remove the data-hit-endpoint, data-event-endpoint, and data-dev attribute. -->
         <script defer type="text/javascript" src="https://localhost.com:9999/pirsch-extended.js"
             id="pirschextendedjs"
-            data-code="HnjsoKPyaSCtRpUs4Z9Gv3mzw9K8uKk5"
+            data-code="Q3whFZqI1KUqCplzFv8N5BQHl0Q9P6et"
             data-hit-endpoint="https://localhost.com:9999/hit"
             data-event-endpoint="https://localhost.com:9999/event"
             data-dev></script>
@@ -126,7 +126,7 @@
             </button>
         </p>
         <p>
-            <button class="pirsch-event=CSS+Button+Clicked pirsch-meta-key=meta+value pirsch-duration=3">
+            <button class="btn pirsch-event=CSS+Button+Clicked pirsch-meta-key=meta+value pirsch-duration=3">
                 Trigger Custom Event (CSS)
             </button>
         </p>
