--- a/web/static/index.html
+++ b/web/static/index.html
@@ -84,7 +84,7 @@
         <!-- Adjust the data-code attribute with your identification code and remove the data-hit-endpoint, data-event-endpoint, and data-dev attribute. -->
         <script defer src="https://localhost.com:9999/pirsch-extended.js"
             id="pirschextendedjs"
-            data-code="Te9uQLjMEAzzRsRJII9GUJEpRt0YIwUn"
+            data-code=""
             data-hit-endpoint="https://localhost.com:9999/hit"
             data-event-endpoint="https://localhost.com:9999/event"
             data-dev></script>
