Fixed roll-up demo.

--- a/rollup/bar.com/index.html
+++ b/rollup/bar.com/index.html
@@ -45,12 +45,13 @@
             data-code=""
             data-hit-endpoint="https://localhost.com:9999/hit"
             data-event-endpoint="https://localhost.com:9999/event"
+            data-disable-referrer
             data-dev></script>
     </head>
     <body>
         <h1>Welcome to the Pirsch Roll-Up Demo!</h1>
         <p>
-            <a href="http://foo.com:8081/dir">Visit foo.com!</a>
+            <a href="http://foo.com:8082/dir?ref=bar.com">Visit foo.com!</a>
         </p>
     </body>
 </html>
