--- a/rollup/foo.com/dir/index.html
+++ b/rollup/foo.com/dir/index.html
@@ -45,12 +45,13 @@
             data-code=""
             data-hit-endpoint="https://localhost.com:9999/hit"
             data-event-endpoint="https://localhost.com:9999/event"
+            data-disable-referrer
             data-dev></script>
     </head>
     <body>
         <h1>Welcome to the Pirsch Roll-Up Demo!</h1>
         <p>
-            <a href="http://bar.com:8080">Visit bar.com!</a>
+            <a href="http://bar.com:8081?ref=bar.com">Visit bar.com!</a>
         </p>
     </body>
 </html>
