--- a/web/static/index.html
+++ b/web/static/index.html
@@ -2,89 +2,12 @@
 <html>
     <head>
         <title>Pirsch Web Demo</title>
-        <style type="text/css">
-            html {
-                margin: 0;
-                padding: 0;
-                font-size: 20px;
-                font-family: sans-serif;
-            }
-
-            body {
-                max-width: 900px;
-                padding: 40px;
-                margin: 0 auto;
-            }
-
-            h1 {
-                font-size: 36px;
-            }
-
-            h2 {
-                font-size: 28px;
-            }
-
-            p {
-                margin: 20px 0;
-                padding: 0;
-            }
-
-            a {
-                color: #63957b;
-                text-decoration: none;
-            }
-
-            a:hover {
-                text-decoration: underline;
-            }
-
-            .menu {
-                display: inline-block;
-                background: #91dab4;
-                text-decoration: none;
-                color: #000;
-                border-radius: 3px;
-                padding: 6px 12px;
-                margin: 0 6px 0 0;
-                transition: all 0.3s;
-                cursor: pointer;
-            }
-
-            .menu:hover {
-                background: #91dab4be;
-                text-decoration: none;
-            }
-
-            button, input[type~="submit"] {
-                border-width: 0;
-                background: #91dab4;
-                color: #000;
-                border-radius: 3px;
-                padding: 12px 24px;
-                font-size: 20px;
-                cursor: pointer;
-                transition: all 0.3s;
-            }
-
-            button:hover {
-                background: #91dab4be;
-            }
-
-            input {
-                max-width: 300px;
-                border: 1px solid #91dab4;
-                color: #000;
-                border-radius: 3px;
-                padding: 12px;
-                font-size: 20px;
-                margin: 4px 0 12px 0;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="style.css" />
 
         <!-- Adjust the data-code attribute with your identification code and remove the data-hit-endpoint, data-event-endpoint, and data-dev attribute. -->
         <script defer src="https://localhost.com:9999/pirsch-extended.js"
             id="pirschextendedjs"
-            data-code=""
+            data-code="sn5PO84zf3jV4mpPf7HRYJt9lPrFtKZC"
             data-hit-endpoint="https://localhost.com:9999/hit"
             data-event-endpoint="https://localhost.com:9999/event"
             data-dev></script>
@@ -92,8 +15,9 @@
     <body>
         <h1>Welcome to the Pirsch Web Demo!</h1>
         <p>
-            <span class="menu">Home</span>
+            <a href="/" class="menu menu-active">Home</a>
             <a href="/page.html" class="menu">Second Page</a>
+            <a href="/video.html" class="menu">Video Tracking</a>
         </p>
         <p>
             This demo shows how you can use Pirsch on your website. Appart from tracking page views, it also showcases more advanced features, including:
