External link with additional event test.

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -96,6 +96,12 @@
             <a href="">Empty link</a><br />
             <a href=".http:broken">Broken link</a>
         </p>
+        <p>
+            External links with additional event tracking will trigger two events.
+        </p>
+        <p>
+            <a href="https://docs.pirsch.io" pirsch-event="Two events on one click">Visit docs.pirsch.io</a>
+        </p>
 
         <!-- Track file downloads. -->
         <h2>Tracking File Downloads</h2>
