--- a/rollup/foo.com/dir/index.html
+++ b/rollup/foo.com/dir/index.html
@@ -39,19 +39,19 @@
             }
         </style>
 
-        <!-- Adjust the data-code attribute with your identification code and remove the data-hit-endpoint, data-event-endpoint, and data-dev attribute. -->
+        <!-- Adjust the snippet below. -->
         <script defer src="https://localhost.com:9999/pirsch-extended.js"
             id="pirschextendedjs"
-            data-code=""
+            data-code="6dEt4Su2R0nTf4rYAO58fQhbIFznjH9k"
             data-hit-endpoint="https://localhost.com:9999/hit"
             data-event-endpoint="https://localhost.com:9999/event"
-            data-disable-referrer
+            data-path-prefix="/foo-prefix"
             data-dev></script>
     </head>
     <body>
         <h1>Welcome to the Pirsch Roll-Up Demo!</h1>
         <p>
-            <a href="http://bar.com:8081?ref=bar.com">Visit bar.com!</a>
+            <a href="http://bar.com:8081">Visit bar.com!</a>
         </p>
     </body>
 </html>
