Updated roll-up view demo.

--- a/rollup/bar.com/index.html
+++ b/rollup/bar.com/index.html
@@ -40,9 +40,9 @@
         </style>
 
         <!-- Adjust the snippet below. -->
-        <script defer src="https://localhost.com:9999/pirsch-extended.js"
-            id="pirschextendedjs"
-            data-code="6dEt4Su2R0nTf4rYAO58fQhbIFznjH9k"
+        <script defer src="https://localhost.com:9999/pa.js"
+            id="pianjs"
+            data-code="4QG7wSXEaQOFGS2tdOlOZ0BZ6CZkxGPJ"
             data-hit-endpoint="https://localhost.com:9999/hit"
             data-event-endpoint="https://localhost.com:9999/event"
             data-dev></script>
