Updated JS SDK.

--- a/iframe/index.html
+++ b/iframe/index.html
@@ -4,6 +4,6 @@
         <title>Pirsch iframe Demo</title>
     </head>
     <body style="display: flex;justify-content: center;align-items: center;">
-        <iframe src="https://pirsch.pirsch.io/?access=GHiEj0IUX1kovH0nsCXf&ui=hide&interval=30d&scale=day&mode=light" width="1200" height="800" />
+        <iframe src="https://pirsch-dev.localhost.com:8888/?access=qyB23abBf2IC1KlSzjdz&ui=hide&interval=30d&scale=day&mode=light" width="1200" height="800" />
     </body>
 </html>
