Added path prefix/suffix to CF worker.

--- a/cloudflare-workers/index.html
+++ b/cloudflare-workers/index.html
@@ -4,6 +4,7 @@
         <title>Pirsch Cloudflare Demo</title>
 
         <!-- Pirsch JS snippet using the Cloudflare worker. You need to adjust this to match yours of course. -->
+        <!-- data-dev is only required if you run it locally! -->
         <script defer src="https://round-hill-c3a4.marvin-blum5810.workers.dev/static/files/pa.js"
             id="pianjs"
             data-hit-endpoint="https://round-hill-c3a4.marvin-blum5810.workers.dev/p/pv"
@@ -12,5 +13,7 @@
     </head>
     <body>
         <p>View your browser's network tab to see the requests!</p>
+        <p>Click the button bellow to send a custom event.</p>
+        <button data-pirsch-event="Custom Event">Custom Event</button>
     </body>
 </html>
